Update Docker setup and server properties for Minecraft server: rename service, adjust memory allocation, and modify game settings

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,28 @@ name: fufuland
 
 services:
   playit:
-    image: ghcr.io/playit-cloud/playit-agent
+    image: ghcr.io/playit-cloud/playit-agent:latest
     platform: linux/amd64
     network_mode: host
     env_file:
       - .env
     environment:
       - SECRET_KEY=${SECRET_KEY}
+    depends_on:
+      - server
 
-  mc:
+  server:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: fufuland-mc
+    container_name: fufuland-server
     ports:
       - "25565:25565"
     volumes:
       - mc-data:/opt/minecraft/mc
+      - ./server.properties:/opt/minecraft/server.properties
     environment:
       - MEMORY=8G
-      # - CUSTOM_SERVER=/data/fabric-server-mc.1.21.5-loader.0.16.14-launcher.1.0.3.jar
     restart: no
     stdin_open: true
     tty: true
