--- a/server.properties
+++ b/server.properties
@@ -1,30 +1,30 @@
-# Minecraft server properties
-# [Generation time]
+#Minecraft server properties
+#Tue Jun 10 01:11:34 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=easy
-enable-command-block=false
-enable-jmx-monitoring=false
-enable-query=false
+difficulty=hard
+enable-command-block=true
+enable-jmx-monitoring=true
+enable-query=true
 enable-rcon=false
 enable-status=true
-enforce-secure-profile=true
+enforce-secure-profile=false
 enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=creative
+gamemode=survival
 generate-structures=true
 generator-settings={}
 hardcore=false
 hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
-level-name=world
+level-name=fufuland
 level-seed=
 level-type=minecraft\:normal
 log-ips=true
@@ -32,7 +32,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=legalize sesbian lex
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
