--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,7 @@
 #Minecraft server properties
-#Tue Jun 10 01:11:34 UTC 2025
+#Wed Jun 11 00:26:29 UTC 2025
 accepts-transfers=false
+allow-cheats=true
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -10,7 +11,7 @@ difficulty=hard
 enable-command-block=true
 enable-jmx-monitoring=true
 enable-query=true
-enable-rcon=false
+enable-rcon=true
 enable-status=true
 enforce-secure-profile=false
 enforce-whitelist=false
@@ -25,7 +26,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=fufuland
-level-seed=
+level-seed=875847600000
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
@@ -42,7 +43,7 @@ prevent-proxy-connections=false
 pvp=true
 query.port=25565
 rate-limit=0
-rcon.password=
+rcon.password=fufuzinha
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
@@ -52,12 +53,12 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=0.0.0.0
 server-port=25565
-simulation-distance=10
+simulation-distance=16
 spawn-monsters=true
 spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=10
+view-distance=32
 white-list=false
