Update server properties and docker-compose configuration: adjust CPU shares, modify max players, and disable RCON

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
         condition: service_healthy
 
   server:
+    cpu_shares: 4096
     restart: no
     stdin_open: true
     tty: true
