--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jun 14 00:28:49 UTC 2025
+#Sat Jun 14 00:39:33 UTC 2025
 accepts-transfers=false
 allow-cheats=true
 allow-flight=false
@@ -11,7 +11,7 @@ difficulty=hard
 enable-command-block=true
 enable-jmx-monitoring=true
 enable-query=true
-enable-rcon=true
+enable-rcon=false
 enable-status=true
 enforce-secure-profile=false
 enforce-whitelist=false
@@ -30,7 +30,7 @@ level-seed=875930400000
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=5
 max-tick-time=60000
 max-world-size=29999984
 motd=legalize sesbian lex
