--- a/server.properties
+++ b/server.properties
@@ -9,7 +9,7 @@ broadcast-rcon-to-ops=true
 bug-report-link=
 difficulty=hard
 enable-command-block=true
-enable-jmx-monitoring=true
+enable-jmx-monitoring=false
 enable-query=true
 enable-rcon=false
 enable-status=true
@@ -33,7 +33,7 @@ max-chained-neighbor-updates=1000000
 max-players=5
 max-tick-time=60000
 max-world-size=29999984
-motd=legalize sesbian lex
+motd=sesbian lex
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
@@ -53,12 +53,14 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=0.0.0.0
 server-port=25565
-simulation-distance=16
+simulation-distance=4
 spawn-monsters=true
 spawn-protection=16
-sync-chunk-writes=true
+sync-chunk-writes=false
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
 view-distance=32
 white-list=false
+enable-lan-visibility=true
+max-threads=0
