Update docker-compose and server properties: add TARGETARCH argument for build and update server properties timestamp

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        TARGETARCH: linux
     container_name: fufuland-server
     ports:
       - 25565:25565
