Update .env.example and docker-compose configuration: add CF_TOKEN environment variable and replace SECRET_KEY with CF_TOKEN in dns service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,13 @@
 name: fufuland
 
 services:
-  playit:
-    image: ghcr.io/playit-cloud/playit-agent:latest
-    platform: linux/amd64
+  dns:
+    image: cloudflare/cloudflared:latest
     network_mode: host
     env_file:
       - .env
     environment:
-      - SECRET_KEY=${SECRET_KEY}
+      - CF_TOKEN=${CF_TOKEN}
     depends_on:
       server:
         condition: service_healthy
