--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,19 @@
 name: fufuland
 
 services:
+  tunnel:
+    image: ghcr.io/playit-cloud/playit-agent:latest
+    network_mode: host
+    env_file:
+      - .env
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+    depends_on:
+      server:
+        condition: service_healthy
+
   server:
+    network_mode: host
     cpu_shares: 4096
     restart: no
     stdin_open: true
@@ -13,7 +25,8 @@ services:
         TARGETARCH: linux
     container_name: fufuland-server
     ports:
-      - 25565:25565
+      - "25565:25565/tcp"
+      - "25565:25565/udp"
     volumes:
       - mc-data:/opt/minecraft/mc
       - ./server.properties:/opt/minecraft/mc/server.properties
