--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
-    "@types/node": "^24.0.1",
+    "@types/node": "^24.1.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "adm-zip": "^0.5.16"
-  }
+  },
+  "type": "module"
 }
