Update Dockerfile to use JDK instead of JRE, modify package.json to change the process script and add a dev script, and upgrade esbuild and related packages in pnpm-lock.yaml. Introduce new configuration and processing scripts for modpack handling, including file processing and API interactions, while removing the old process.ts file.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Scripts for processing Minecraft modpacks",
   "scripts": {
-    "process": "tsx scripts/process.ts"
+    "process": "tsx scripts/index.ts",
+    "dev": "tsx watch scripts/index.ts"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
