Refactor package.json and tsconfig.json: reorganize fields for clarity, ensure proper script definitions, and include tsconfig.json in the include path for TypeScript compilation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     ]
   },
   "include": [
-    "scripts/**/*"
+    "scripts/**/*",
+    "tsconfig.json"
   ],
   "exclude": [
     "node_modules"
