--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jul 26 23:26:08 UTC 2025
+#Sat Aug 09 21:54:35 UTC 2025
 accepts-transfers=false
 allow-cheats=true
 allow-flight=false
@@ -7,7 +7,7 @@ allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=hard
+difficulty=normal
 enable-command-block=true
 enable-jmx-monitoring=false
 enable-lan-visibility=true
@@ -56,11 +56,13 @@ resource-pack-sha1=
 server-ip=0.0.0.0
 server-port=25565
 simulation-distance=4
+spawn-animals=true
 spawn-monsters=true
+spawn-npcs=true
 spawn-protection=16
 sync-chunk-writes=false
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=16
+view-distance=32
 white-list=false
