--- a/package.json
+++ b/package.json
@@ -1,19 +1,1 @@
-{
-  "dependencies": {
-    "adm-zip": "^0.5.16"
-  },
-  "description": "Scripts for processing Minecraft modpacks",
-  "devDependencies": {
-    "@types/adm-zip": "^0.5.7",
-    "@types/node": "^24.1.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
-  },
-  "name": "mc-fufuland-scripts",
-  "scripts": {
-    "dev": "tsx watch scripts/index.ts",
-    "process": "tsx scripts/index.ts"
-  },
-  "type": "module",
-  "version": "1.0.0"
-}
+../the.files/mc-fufuland/package.json
