--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,1 @@
-{
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "lib": [
-      "ES2022"
-    ],
-    "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "verbatimModuleSyntax": true,
-    "typeRoots": [
-      "types"
-    ]
-  },
-  "include": [
-    "scripts/**/*",
-    "tsconfig.json"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
-}
+../the.files/mc-fufuland/tsconfig.json
