--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,1 +1,15 @@
-../../the.files/mc-fufuland/.vscode/launch.json
+{
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node-terminal",
+      "name": "Run Script: process",
+      "request": "launch",
+      "command": "pnpm run process",
+      "cwd": "${workspaceFolder}"
+    }
+  ]
+}
