--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,27 @@
-../the.files/mc-fufuland/tsconfig.json
+{
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "NodeNext",
+    "lib": [
+      "ES2022"
+    ],
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "verbatimModuleSyntax": true,
+    "typeRoots": [
+      "types"
+    ]
+  },
+  "include": [
+    "scripts/**/*",
+    "tsconfig.json"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
